# boring_ssl_builder

./: MANIFEST.in  README.md  build.sh  pyproject.toml  result.txt  setup.py  test.py  test.sh
.github/workflows/: build.yml
boringssl_binary_build/: __init__.py
bssl_build/: __init__.py
